# mortonizing

./: .clang-format  CMakeLists.txt
lib/: CMakeLists.txt  voxel_grid.cpp
lib/include/mortonizing/: voxel_grid.hpp
